[metadata]
name = fluenthttpfs
summary = fluenthttpfs library
version = 1.0
description_file = README.md
author = zbw
author_email = 2535463841@qq.com
home_page = https://github.com/2535463841/FluentUtils/tree/main/FluentHttpFS

[files]
packages = fluenthttpfs

[entry_points]
console_scripts =
    fp-httpfs-server = fluenthttpfs.server:main
