[metadata]
name = fphttpfs
summary = Fluent Python Http FS
version = 1.0
description_file = README.md
author = zbw
author_email = 2535463841@qq.com
home_page = https://github.com/2535463841/FluentUtils/tree/main/FluentHttpFS

[files]
packages = fphttpfs

[entry_points]
console_scripts =
    fp-httpfs-server = fphttpfs.cmd.httpfs_server:main
