[metadata]
name = fputils
summary = Fluent Python Utils
version = 1.0
description_file =
    README.md
author = zbw
author_email = 2535463841@qq.com
home_page = https://github.com/2535463841/FPPackages/tree/main/FPUtils

[files]
packages =
    fputils

[entry_points]
console_scripts =
    fp-utils = fputils.cmd.base:main
    fp-utils-ext = fputils.cmd.ext:main

fputils.extensions =
    fp_qrcode = fputils.extensions.qrcode:list_sub_commands
    fp_sshcp = fputils.extensions.sshcp:list_sub_commands
    fp_tanslate = fputils.extensions.translate:list_sub_commands
    fp_wd = fputils.extensions.wallpaper.downloaders:list_sub_commands
