[metadata]
name = fpstackutils
summary = Fluent Python Openstack Utils
version = 1.0
description_file = README.md
author = zbw
author_email = 2535463841@qq.com
home_page = https://github.com/2535463841/FPPackages/tree/main/FPStackUtils

[files]
packages = fpstackutils


[entry_points]
console_scripts =
    ec-nova = fpstackutils.cmd.nova:main
