[metadata]
name = fp.utils
summary = Fluent Python Utils
version = 1.0
description_file =
    README.md
author = zbw
author_email = 2535463841@qq.com
home_page = https://github.com/2535463841/FPPackages/tree/main/FPUtils

[files]
packages = fp_utils

[entry_points]
console_scripts =
    fp-utils = fp_utils.cmd.base:main
    fp-utils-ext = fp_utils.cmd.ext:main

fputils.extensions =
    fp_qrcode = fp_utils.extensions.qrcode:list_sub_commands
    fp_sshcp = fp_utils.extensions.sshcp:list_sub_commands
    fp_tanslate = fp_utils.extensions.translate:list_sub_commands
    fp_wd = fp_utils.extensions.wallpaper.downloaders:list_sub_commands
    fp_jgupload = fp_utils.extensions.webdav.jianguo:list_sub_commands
    fp_smmsupload = fp_utils.extensions.picbed.smms:list_sub_commands
    fp_giteeupload = fp_utils.extensions.picbed.gitee:list_sub_commands
